Added classes to first login view

--- a/views/firstLogin/consentError.hbs
+++ b/views/firstLogin/consentError.hbs
@@ -1,8 +1,9 @@
 {{#extend "lib/simple"}}
-  {{#content "page"}}
-    <h1>🙀 Entschuldige, das hat nicht geklappt</h1>
-    <p>Dein Login funktioniert, allerdings gibt es ein Problem mit deinen Einverständniserklärungen. Bitte wende dich an deinen Lehrer oder einen Administrator.
-    </p>
-     <a class="btn btn-primary" href="/logout">Ausloggen</a>
-  {{/content}}
+{{#content "page"}}
+<h2 class="h1">🙀 Entschuldige, das hat nicht geklappt</h2>
+<p>Dein Login funktioniert, allerdings gibt es ein Problem mit deinen Einverständniserklärungen. Bitte wende dich an
+    deinen Lehrer oder einen Administrator.
+</p>
+<a class="btn btn-primary" href="/logout">Ausloggen</a>
+{{/content}}
 {{/extend}}
