--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -1,120 +1,120 @@
 {{#extend "lib/loggedin"}}
 
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/help/help.css"/>
-    {{/content}}
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/help/help.css" />
+{{/content}}
 
-    {{#content "scripts" mode="append"}}
-        <script src="/scripts/help.js" type="text/javascript" defer></script>
-    {{/content}}
+{{#content "scripts" mode="append"}}
+<script src="/scripts/help.js" type="text/javascript" defer></script>
+{{/content}}
 
-    {{#content "page"}}
+{{#content "page"}}
 
-        {{> "help/search" class="md-2"}}
+{{> "help/search" class="md-2"}}
 
-        <div class="container">
-            <div class="row">
-                {{#embed "help/icon-card" title="Inhaltsverzeichnis" icon="fa-list" class="table-of-contents-card hidden-sm-up col-xs-12" id="inhaltsverzeichnis"}}
-                    {{#content "card-body"}}
-                    <ul>
-                        {{#if false}}<li><a href="#erste_schritte">Erste Schritte</a></li>{{/if}}
-                        {{#each tutorials}}
-                            <li><a href="#{{this.title}}">{{this.title}}</a></li>
-                        {{/each}}
-                        <li><a href="#nutzungshilfen">Nutzungshilfen</a></li>
-                        <li><a href="#kontakt">Kontaktformular</a></li>
-                        <li><a href="#email">Schreib uns eine E-Mail</a></li>
-                        <li><a href="#ueber_das_projekt">Über das Projekt</a></li>
-                        <li><a href="#sprachhinweis">Sprachlicher Hinweis</a></li>
-                    </ul>
-                    {{/content}}
-                {{/embed}}
+<div class="container">
+    <div class="row">
+        {{#embed "help/icon-card" title="Inhaltsverzeichnis" icon="fa-list" class="table-of-contents-card hidden-sm-up col-xs-12" id="inhaltsverzeichnis"}}
+        {{#content "card-body"}}
+        <ul>
+            {{#if false}}<li><a href="#erste_schritte">Erste Schritte</a></li>{{/if}}
+            {{#each tutorials}}
+            <li><a href="#{{this.title}}">{{this.title}}</a></li>
+            {{/each}}
+            <li><a href="#nutzungshilfen">Nutzungshilfen</a></li>
+            <li><a href="#kontakt">Kontaktformular</a></li>
+            <li><a href="#email">Schreib uns eine E-Mail</a></li>
+            <li><a href="#ueber_das_projekt">Über das Projekt</a></li>
+            <li><a href="#sprachhinweis">Sprachlicher Hinweis</a></li>
+        </ul>
+        {{/content}}
+        {{/embed}}
 
-                {{#embed "help/icon-card" title="Erste Schritte" icon="fa-child" class="first-steps-card col-xs-12" id="erste_schritte"}}
-                    {{#content "card-body"}}
-                        {{> "help/icon-link-group" links=firstStepsItems link-class="col-sm-3"}}
-                    {{/content}}
-                {{/embed}}
+        {{#embed "help/icon-card" title="Erste Schritte" icon="fa-child" class="first-steps-card col-xs-12" id="erste_schritte"}}
+        {{#content "card-body"}}
+        {{> "help/icon-link-group" links=firstStepsItems link-class="col-sm-3"}}
+        {{/content}}
+        {{/embed}}
 
-                {{#each tutorials}}
-                    {{#embed "help/icon-card" title=this.title icon=this.icon id=this.title class="col-md-6"}}
-                        {{#content "card-body"}}
-                            <div class="collapse__section">
-                                {{#each this.categories}}
-                                    {{#if this.articles}}
-                                        <div class="collapse__item">
-                                            <button class="collapse__title collapsed" data-toggle="collapse" data-target="#collapsable-{{this.id}}"
-                                                aria-expanded="false" aria-controls="collapsable-{{this.id}}" type="button" tabindex="0">
-                                                <i class="fa fa-fw fa-chevron-right" aria-hidden="true" data-expand></i>
-                                                <i class="fa fa-fw fa-chevron-down" aria-hidden="true" data-collapse></i>
-                                                <h5>
-                                                    {{this.title}}
-                                                </h5>
-                                            </button>
-                                            <ul id="collapsable-{{this.id}}" class="collapse collapse__content">
-                                                {{#each this.articles}}
-                                                    <li><a href="/help/confluence/{{this.id}}">
-                                                        {{this.title}}
-                                                    </a></li>
-                                                {{/each}}
-                                            </ul>
-                                        </div>
-                                    {{else}}
-                                        <div class="collapse__item">
-                                            <div class="collapse__title single">
-                                                <i class="fa fa-fw" aria-hidden="true"></i>
-                                                <a href="/help/confluence/{{this.id}}">
-                                                    <h5>
-                                                        {{this.title}}
-                                                    </h5>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    {{/if}}
-                                {{/each}}
-                            </div>
-                        {{/content}}
-                    {{/embed}}
-                {{/each}}
-
-                {{#embed "help/icon-card" title="Nutzungshilfen" icon="fa-map-signs" class="quickHelp-card col-xs-12" id="nutzungshilfen"}}
-                    {{#content "card-body"}}
-                        {{> "help/icon-link-group" links=quickHelpItems link-class="col-sm-4"}}
-                    {{/content}}
-                {{/embed}}
-
-                {{#if demo}}
-                    {{#embed "help/icon-card" title="Schreib uns eine E-Mail" icon="fa-envelope" class="eMail-card col-md-12" id="email"}}
-                        {{#content "card-body"}}
-                            {{> "help/mail-card"}}
-                        {{/content}}
-                    {{/embed}}
-                {{else}}
-                    {{#embed "help/icon-card" title="Kontaktformular" icon="fa-pencil" class="contact-card col-md-6" id="kontakt"}}
-                        {{#content "card-body"}}
-                            {{> "help/contact"}}
-                        {{/content}}
-                    {{/embed}}
-
-                    {{#embed "help/icon-card" title="Schreib uns eine E-Mail" icon="fa-envelope" class="eMail-card col-md-6" id="email"}}
-                        {{#content "card-body"}}
-                            {{> "help/mail-card"}}
-                        {{/content}}
-                    {{/embed}}
-                {{/if}}
-
-                {{#embed "help/icon-card" title="Über das Projekt" icon="fa-lightbulb-o" class="information-card col-xs-12" id="ueber_das_projekt"}}
-                    {{#content "card-body"}}
-                        {{> "help/icon-link-group" links=knowledgeItems link-class="col-sm-4"}}
-                    {{/content}}
-                {{/embed}}
-
-                {{#embed "help/icon-card" title="Sprachlicher Hinweis" icon="fa-magic" class="" id="sprachhinweis"}}
-                    {{#content "card-body"}}
-                        {{> "help/language-hint"}}
-                    {{/content}}
-                {{/embed}}
+        {{#each tutorials}}
+        {{#embed "help/icon-card" title=this.title icon=this.icon id=this.title class="col-md-6"}}
+        {{#content "card-body"}}
+        <div class="collapse__section">
+            {{#each this.categories}}
+            {{#if this.articles}}
+            <div class="collapse__item">
+                <button class="collapse__title collapsed" data-toggle="collapse" data-target="#collapsable-{{this.id}}"
+                    aria-expanded="false" aria-controls="collapsable-{{this.id}}" type="button" tabindex="0">
+                    <i class="fa fa-fw fa-chevron-right" aria-hidden="true" data-expand></i>
+                    <i class="fa fa-fw fa-chevron-down" aria-hidden="true" data-collapse></i>
+                    <h2 class="h5">
+                        {{this.title}}
+                    </h2>
+                </button>
+                <ul id="collapsable-{{this.id}}" class="collapse collapse__content">
+                    {{#each this.articles}}
+                    <li><a href="/help/confluence/{{this.id}}">
+                            {{this.title}}
+                        </a></li>
+                    {{/each}}
+                </ul>
             </div>
+            {{else}}
+            <div class="collapse__item">
+                <div class="collapse__title single">
+                    <i class="fa fa-fw" aria-hidden="true"></i>
+                    <a href="/help/confluence/{{this.id}}">
+                        <h2 class="h5">
+                            {{this.title}}
+                        </h2>
+                    </a>
+                </div>
+            </div>
+            {{/if}}
+            {{/each}}
         </div>
-    {{/content}}
+        {{/content}}
+        {{/embed}}
+        {{/each}}
+
+        {{#embed "help/icon-card" title="Nutzungshilfen" icon="fa-map-signs" class="quickHelp-card col-xs-12" id="nutzungshilfen"}}
+        {{#content "card-body"}}
+        {{> "help/icon-link-group" links=quickHelpItems link-class="col-sm-4"}}
+        {{/content}}
+        {{/embed}}
+
+        {{#if demo}}
+        {{#embed "help/icon-card" title="Schreib uns eine E-Mail" icon="fa-envelope" class="eMail-card col-md-12" id="email"}}
+        {{#content "card-body"}}
+        {{> "help/mail-card"}}
+        {{/content}}
+        {{/embed}}
+        {{else}}
+        {{#embed "help/icon-card" title="Kontaktformular" icon="fa-pencil" class="contact-card col-md-6" id="kontakt"}}
+        {{#content "card-body"}}
+        {{> "help/contact"}}
+        {{/content}}
+        {{/embed}}
+
+        {{#embed "help/icon-card" title="Schreib uns eine E-Mail" icon="fa-envelope" class="eMail-card col-md-6" id="email"}}
+        {{#content "card-body"}}
+        {{> "help/mail-card"}}
+        {{/content}}
+        {{/embed}}
+        {{/if}}
+
+        {{#embed "help/icon-card" title="Über das Projekt" icon="fa-lightbulb-o" class="information-card col-xs-12" id="ueber_das_projekt"}}
+        {{#content "card-body"}}
+        {{> "help/icon-link-group" links=knowledgeItems link-class="col-sm-4"}}
+        {{/content}}
+        {{/embed}}
+
+        {{#embed "help/icon-card" title="Sprachlicher Hinweis" icon="fa-magic" class="" id="sprachhinweis"}}
+        {{#content "card-body"}}
+        {{> "help/language-hint"}}
+        {{/content}}
+        {{/embed}}
+    </div>
+</div>
+{{/content}}
 {{/extend}}
