--- a/views/help/icon-card.hbs
+++ b/views/help/icon-card.hbs
@@ -1,11 +1,11 @@
 <div class="icon-card {{class}}" id="{{id}}">
     <div class="icon-card__content">
         {{#if icon}}
-            <a href="#{{id}}" class="icon-card__icon" tabindex="-1">
-                <i class="fa fa-fw {{icon}}" aria-hidden="true"></i>
-            </a>
+        <a href="#{{id}}" class="icon-card__icon" tabindex="-1">
+            <i class="fa fa-fw {{icon}}" aria-hidden="true"></i>
+        </a>
         {{/if}}
-        <h4 class="icon-card__title">{{title}}</h4>
+        <h2 class="icon-card__title h4">{{title}}</h2>
         <div class="icon-card__body">
             {{#block "card-body"}}{{/block}}
         </div>
