Added classes to homework view

--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -2,71 +2,76 @@
     <nav class="tab-links">
         <a id="submission-tab-link" class="tab-link active">Abgabe</a>
         {{#if @root.isTeacher}}
-            <a id="comment-tab-link" class="tab-link">Bewertung</a>
+        <a id="comment-tab-link" class="tab-link">Bewertung</a>
         {{/if}}
     </nav>
     <div class="tabs">
         <div id="submission" class="tab-content active">
             <div class="comment">
                 {{#if this.submission}}
-                    {{#ifneq 0 (arrayLength this.submission.fileIds)}}
-                        {{#embed "homework/components/submission_uploaded_files" deletionAllowed=false submission=../submission}}{{/embed}}
-                        <hr>
-                    {{/ifneq}}
-                    <div class="ckcontent print">
-                        <div class="btn btn-secondary btn-print mb-1"
-                            data-toggle="tooltip" title="Abgabe drucken">
-                                <i class='fa fa-print'></i> Drucken
-                        </div>
-                        {{{this.submission.comment}}}
+                {{#ifneq 0 (arrayLength this.submission.fileIds)}}
+                {{#embed "homework/components/submission_uploaded_files" deletionAllowed=false submission=../submission}}{{/embed}}
+                <hr>
+                {{/ifneq}}
+                <div class="ckcontent print">
+                    <div class="btn btn-secondary btn-print mb-1" data-toggle="tooltip" title="Abgabe drucken">
+                        <i class='fa fa-print'></i> Drucken
                     </div>
+                    {{{this.submission.comment}}}
+                </div>
                 {{else}}
-                    Keine Abgabe.
+                Keine Abgabe.
                 {{/if}}
             </div>
         </div>
         <div id="comment" class="tab-content">
             {{#if @root.isTeacher}}
-                {{#if this.submission}}
-                    <form class="form" method="post" action="/homework/submit/{{this.submission._id}}">
-                        <input type="hidden" name="_method" data-force-value="true" value="patch" />
-                        <input name="homeworkId" type="hidden" data-force-value="true" value="{{@root._id}}" />
-                        {{#if this.submission.courseGroupId}}
-                            <input name="courseGroupId" type="hidden" value="{{this.submission.courseGroupId._id}}"/>
-                            <input name="teamSubmissionOptions" type="hidden" value="courseGroup"/>
-                        {{/if}}
-                {{else}}
-                    <form class="form" method="post" action="/homework/submit">
-                        <input type="hidden" name="_method" data-force-value="true" value="post" />
-                        <input name="schoolId" type="hidden" data-force-value="true" value="{{this.submission.studentId.schoolId}}" />
-                        <input name="studentId" type="hidden" data-force-value="true" value="{{this.submission.studentId._id}}" />
-                        <input name="homeworkId" type="hidden" data-force-value="true" value="{{@root._id}}" />
+            {{#if this.submission}}
+            <form class="form" method="post" action="/homework/submit/{{this.submission._id}}">
+                <input type="hidden" name="_method" data-force-value="true" value="patch" />
+                <input name="homeworkId" type="hidden" data-force-value="true" value="{{@root._id}}" />
+                {{#if this.submission.courseGroupId}}
+                <input name="courseGroupId" type="hidden" value="{{this.submission.courseGroupId._id}}" />
+                <input name="teamSubmissionOptions" type="hidden" value="courseGroup" />
                 {{/if}}
-                <div class="comment form-group">
-                    <div class="form-group">
-                        <label>Bewertung <small>in Prozent</small></label>
-                        <input type="number" min="0" max="100" class="form-control" name="grade" placeholder="95" value="{{this.submission.grade}}">
-                    </div>
-                    {{#if this.submission.comment}}
-                        <button class="importsubmission btn btn-secondary btn-sm float-xs-right" data="{{this.submission._id}}">Abgabe des Schülers importieren</button>
+                {{else}}
+                <form class="form" method="post" action="/homework/submit">
+                    <input type="hidden" name="_method" data-force-value="true" value="post" />
+                    <input name="schoolId" type="hidden" data-force-value="true"
+                        value="{{this.submission.studentId.schoolId}}" />
+                    <input name="studentId" type="hidden" data-force-value="true"
+                        value="{{this.submission.studentId._id}}" />
+                    <input name="homeworkId" type="hidden" data-force-value="true" value="{{@root._id}}" />
                     {{/if}}
-                    <h6>Kommentar</h6>
-                    <textarea id="evaluation {{this.submission._id}}" name="gradeComment" type="text" class="form-control customckeditor" placeholder="Bewertungskommentar">{{this.submission.gradeComment}}</textarea>
-                </div>
-                {{#userHasPermission "HOMEWORK_CREATE"}}
+                    <div class="comment form-group">
+                        <div class="form-group">
+                            <label>Bewertung <small>in Prozent</small></label>
+                            <input type="number" min="0" max="100" class="form-control" name="grade" placeholder="95"
+                                value="{{this.submission.grade}}">
+                        </div>
+                        {{#if this.submission.comment}}
+                        <button class="importsubmission btn btn-secondary btn-sm float-xs-right"
+                            data="{{this.submission._id}}">Abgabe des Schülers importieren</button>
+                        {{/if}}
+                        <h2 class="h6">Kommentar</h2>
+                        <textarea id="evaluation {{this.submission._id}}" name="gradeComment" type="text"
+                            class="form-control customckeditor"
+                            placeholder="Bewertungskommentar">{{this.submission.gradeComment}}</textarea>
+                    </div>
+                    {{#userHasPermission "HOMEWORK_CREATE"}}
                     <button type="submit" class="btn btn-primary">Speichern</button>
-                {{/userHasPermission}}
+                    {{/userHasPermission}}
                 </form>
-            {{else}}
+                {{else}}
                 <b class="grade">{{{this.submission.gradeText}}}</b>
                 <div class="comment">
                     {{#if this.submission.gradeComment}}
-                        {{{this.submission.gradeComment}}}
+                    {{{this.submission.gradeComment}}}
                     {{else}}
-                        <p>Kein Bewertungstext vorhanden.</p>
+                    <p>Kein Bewertungstext vorhanden.</p>
                     {{/if}}
                 </div>
-            {{/if}}
+                {{/if}}
         </div>
     </div>
 </section>
