--- a/views/imprint/imprint_guests.hbs
+++ b/views/imprint/imprint_guests.hbs
@@ -1,28 +1,30 @@
 {{#extend "lib/default"}}
 
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
-        <link rel="stylesheet" href="/styles/imprint/imprint.css"/>
-        <style>
-            body {
-                background: #e6e2e2;
-            }
-        </style>
-    {{/content}}
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/authentication/home.css" />
+<link rel="stylesheet" href="/styles/imprint/imprint.css" />
+<style>
+    body {
+        background: #e6e2e2;
+    }
+</style>
+{{/content}}
 
-    {{#content "body"}}
-        {{#embed "lib/header"}}{{/embed}}
-        <div class="container">
-            <div class="card">
-                <div class="card-block">
-                    <div class="section-title"><h4>Impressum</h4></div>
-                    {{#embed "imprint/imprint"}}{{/embed}}
-                </div>
+{{#content "body"}}
+{{#embed "lib/header"}}{{/embed}}
+<div class="container">
+    <div class="card">
+        <div class="card-block">
+            <div class="section-title">
+                <h2 class="h4">Impressum</h2>
             </div>
+            {{#embed "imprint/imprint"}}{{/embed}}
         </div>
-        {{#embed "lib/extended_footer"}}{{/embed}}
-    {{/content}}
+    </div>
+</div>
+{{#embed "lib/extended_footer"}}{{/embed}}
+{{/content}}
 
-    {{#content "scripts" mode="append"}}
-    {{/content}}
+{{#content "scripts" mode="append"}}
+{{/content}}
 {{/extend}}
