Added classes to lib view

--- a/views/lib/components/modal.hbs
+++ b/views/lib/components/modal.hbs
@@ -5,10 +5,9 @@
                 <button type="button" class="close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">{{title}}</h4>
+                <h2 class="modal-title h4">{{title}}</h2>
             </div>
             {{#block "body"}}{{/block}}
         </div>
     </div>
 </div>
-
