--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -1,20 +1,26 @@
 <footer>
     <div class="container">
-        <div class="row">  
-            <div  class="col-md-4">        
-                <h4>Kontakt</h4>
-                <ul>
-                    <li>Allgemeine Anfragen: <a href="mailto:info@schul-cloud.org" target="_blank">info@schul-cloud.org</a></li>
-                    <li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org" target="_blank">inhalte@schul-cloud.org</a></li>
-                    <li>Datenschutz: <a href="mailto:datenschutz@schul-cloud.org" target="_blank">datenschutz@schul-cloud.org</a></li>
-                    <li><a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank">Newsletter abonnieren</a></li>
-                </ul>
+        <div class="row">
+            <div class="col-md-4">
+                <h2 class="h4">Kontakt</h4>
+                    <ul>
+                        <li>Allgemeine Anfragen: <a href="mailto:info@schul-cloud.org"
+                                target="_blank">info@schul-cloud.org</a></li>
+                        <li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org"
+                                target="_blank">inhalte@schul-cloud.org</a></li>
+                        <li>Datenschutz: <a href="mailto:datenschutz@schul-cloud.org"
+                                target="_blank">datenschutz@schul-cloud.org</a></li>
+                        <li><a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/"
+                                target="_blank">Newsletter abonnieren</a></li>
+                    </ul>
             </div>
-            <div  class="col-md-4">        
-                <h4>Links</h4>
+            <div class="col-md-4">
+                <h2 class="h4">Links</h2>
                 <ul>
                     <li><a href="/impressum" target="blank">Impressum</a></li>
-                    <li>Datenschutzerklärung: <a href="/impressum#data_security" target="blank">HPI</a> / <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Datenschutz/Datenschutzerklaerung-Muster-Schulen.pdf" target="blank">Muster Schulen</a></li>
+                    <li>Datenschutzerklärung: <a href="/impressum#data_security" target="blank">HPI</a> / <a
+                            href="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Datenschutz/Datenschutzerklaerung-Muster-Schulen.pdf"
+                            target="blank">Muster Schulen</a></li>
                     <li><a href="/team" target="blank">Team</a></li>
                     <li><a href="/partner" target="blank">Partner</a></li>
                     <li><a href="/about" target="blank">Über das Projekt</a></li>
@@ -22,10 +28,13 @@
                 </ul>
             </div>
             <div class="col-md-4">
-                <h4>Mobile App</h4>
+                <h2 class="h4">Mobile App</h2>
                 <div class="android-app">
-                    <a href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-                        <img alt='Jetzt bei Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/de_badge_web_generic.png' height="70"/>
+                    <a
+                        href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+                        <img alt='Jetzt bei Google Play'
+                            src='https://play.google.com/intl/en_us/badges/images/generic/de_badge_web_generic.png'
+                            height="70" />
                     </a>
                 </div>
             </div>
