--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -1,12 +1,13 @@
 <style>
-.btn-toggle[data-state=inactive] {
-  display: none;
-  background: blue;
-}
-.menu[data-state=active] {
-  display: inherit;
-  background: red;
-}
+    .btn-toggle[data-state=inactive] {
+        display: none;
+        background: blue;
+    }
+
+    .menu[data-state=active] {
+        display: inherit;
+        background: red;
+    }
 </style>
 
 <div class="form-group" data-teamId="{{teamId}}">
@@ -15,12 +16,12 @@
     {{!-- <p>Lade externe Experten ein, sich in der {{theme.short_title}} zu registrieren deinem Team beizutreten.</p> --}}
 
     {{!-- <h3>Externe einladen</h3> --}}
-    <h3 class="mt-2">Wen möchtest du ins Team einladen?</h3>
-    <button type="button" data-role="teacher" class="btn btn-set-role" >Lehrer anderer Schulen</button>
+    <h2 class="mt-2 h3">Wen möchtest du ins Team einladen?</h2>
+    <button type="button" data-role="teacher" class="btn btn-set-role">Lehrer anderer Schulen</button>
     <button type="button" data-role="expert" class="btn btn-set-role">Externe Experten</button>
 
     <div class="form-group mt-3" data-role="teacher">
-        <h3>Lehrer anderer Schulen einladen</h3>
+        <h3 class="h3">Lehrer anderer Schulen einladen</h3>
         <p>
             Wähle eine Lehrkraft anderer Schulen aus einem zentralen Verzeichnis aus oder gib die E-Mail-Adresse an, mit
             der sie registriert ist. Nach Beitritt zu deinem Team kann sie Schüler und
@@ -28,56 +29,60 @@
         </p>
 
         <button type="button" data-method="directory" class="btn btn-set-method">Aus Verzeichnis auswählen</button>
-        <button type="button" data-method="email" class="btn btn-set-method" >per E-Mail einladen</button>
+        <button type="button" data-method="email" class="btn btn-set-method">per E-Mail einladen</button>
 
         <div class="form-group mt-3" data-method="directory">
-            <h3>Lehrer auswählen und hinzufügen</h3>
+            <h4 class="h3">Lehrer auswählen und hinzufügen</h4>
             <div class="form-group">
                 <label for="federalstate">Bundesland</label>
-                <select class="search-enabled" placeholder="Bundesland auswählen" data-force-value="true" data-placeholder="Bundesland auswählen" name="federalstate" id="federalstate">
+                <select class="search-enabled" placeholder="Bundesland auswählen" data-force-value="true"
+                    data-placeholder="Bundesland auswählen" name="federalstate" id="federalstate">
                     {{#each federalStates}}
-                        <option value="{{this._id}}" data-id="{{this._id}}" {{#ifeq @root.currentFederalState this._id}}selected="selected"{{/ifeq}}>{{this.name}}</option>
+                    <option value="{{this._id}}" data-id="{{this._id}}"
+                        {{#ifeq @root.currentFederalState this._id}}selected="selected" {{/ifeq}}>{{this.name}}</option>
                     {{/each}}
                 </select>
             </div>
             <div class="form-group">
                 <label for="school">Schule</label>
-                <select class="search-enabled" placeholder="Schule auswählen"  data-placeholder="Schule auswählen" name="school" id="school">
+                <select class="search-enabled" placeholder="Schule auswählen" data-placeholder="Schule auswählen"
+                    name="school" id="school">
                     {{#each schools}}
-                        <option value="{{this._id.name}}" data-id="{{this._id._id}}">{{this.label}}</option>
+                    <option value="{{this._id.name}}" data-id="{{this._id._id}}">{{this.label}}</option>
                     {{/each}}
                 </select>
             </div>
             <div class="form-group">
                 <label for="teacher">Lehrer</label>
-                <select class="search-enabled" placeholder="Lehrer auswählen"  data-placeholder="Lehrer auswählen" name="teacher" id="teacher">
+                <select class="search-enabled" placeholder="Lehrer auswählen" data-placeholder="Lehrer auswählen"
+                    name="teacher" id="teacher">
                     {{#each teachers}}
-                        <option value="{{this._id.name}}" data-id="{{this._id._id}}">{{this.label}}</option>
+                    <option value="{{this._id.name}}" data-id="{{this._id._id}}">{{this.label}}</option>
                     {{/each}}
                 </select>
             </div>
             <div style="margin-bottom: 6rem" class="form-group padding-bottom">
                 <label for="role">Rolle des eingeladenen Lehrers</label>
                 <select name="role" id="role" data-force-value="true" disabled="disabled">
-                        <option value="teamadministrator" selected="selected">Team-Admin</option>
+                    <option value="teamadministrator" selected="selected">Team-Admin</option>
                 </select>
             </div>
-        </div>    
+        </div>
 
         <div class="form-group mt-3" data-method="email">
-            <h3>Lehrer per E-Mail einladen</h3>
+            <h4 class="h3">Lehrer per E-Mail einladen</h4>
             <div class="form-group">
                 <label for="email">Gebe die E-Mail des Lehrers ein, an welchen die Einladung verschickt wird.</label>
                 <input class="form-control" type="text" name="email" id="email" placeholder="E-Mail eingeben">
-            </div>      
-        </div>        
+            </div>
+        </div>
     </div>
 
     <div class="form-group mt-3" data-role="expert">
-        <h3>Externen Experten einladen</h3>
+        <h3 class="h3">Externen Experten einladen</h3>
         <div class="form-group">
             <label for="email">Gebe die E-Mail des Experten ein, an welchen die Einladung verschickt wird.</label>
             <input class="form-control" type="text" name="email" id="email" placeholder="E-Mail eingeben">
-        </div>      
+        </div>
     </div>
 </div>
