--- a/views/topic/components/content-Etherpad.hbs
+++ b/views/topic/components/content-Etherpad.hbs
@@ -1,5 +1,4 @@
-<h4>{{title}}</h4>
+<h2 class="h4">{{title}}</h2>
 <p>{{content.description}}</p>
-<iframe src="{{content.url}}"
-	style="width: 100%; height: 400px; resize: vertical; overflow: auto;"></iframe>
+<iframe src="{{content.url}}" style="width: 100%; height: 400px; resize: vertical; overflow: auto;"></iframe>
 <a href="{{content.url}}" target="_blank" class="pull-right">in neuem Tab öffnen</a>
