--- a/views/topic/components/content-neXboard.hbs
+++ b/views/topic/components/content-neXboard.hbs
@@ -1,4 +1,5 @@
-<h4>{{title}}</h4>
+<h2 class="h4">{{title}}</h2>
 <p>{{content.description}}</p>
-<iframe src="{{content.url}}?username=Test" style="width: 100%; height: 400px; resize: vertical; overflow: auto;"></iframe>
+<iframe src="{{content.url}}?username=Test"
+    style="width: 100%; height: 400px; resize: vertical; overflow: auto;"></iframe>
 <a href="{{content.url}}?username=Test" target="_blank" class="pull-right">in neuem Tab öffnen</a>
