--- a/views/topic/components/content-resources.hbs
+++ b/views/topic/components/content-resources.hbs
@@ -1,21 +1,21 @@
-<h4>{{title}}</h4>
+<h2 class="h4">{{title}}</h2>
 
 <div class="card-columns">
 
     {{#each content.resources}}
-        <div class="card">
-            <div class="card-block">
-                <h4 class="card-title">
-                    <a href="{{url}}" target="_blank">
-                        {{title}}
-                    </a>
-                </h4>
-                <p class="card-text">{{description}}</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">via {{client}}</small>
-            </div>
+    <div class="card">
+        <div class="card-block">
+            <h3 class="card-title h4">
+                <a href="{{url}}" target="_blank">
+                    {{title}}
+                </a>
+            </h3>
+            <p class="card-text">{{description}}</p>
         </div>
+        <div class="card-footer">
+            <small class="text-muted">via {{client}}</small>
+        </div>
+    </div>
     {{/each}}
 
 </div>
